--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "license": "ISC",
     "dependencies": {
         "@ant-design/icons": "^5.3.7",
-        "@dnd-kit/core": "^6.1.0",
         "@loadable/component": "^5.15.3",
         "@reduxjs/toolkit": "^2.3.0",
         "antd": "^5.19.2",
         "classnames": "^2.3.2",
         "fabric": "^6.4.3",
         "react": "^18.2.0",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.14.2"
