--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
         "react-dnd": "^16.0.1",
         "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.2.0",
+        "react-json-view": "^1.21.3",
         "react-redux": "^9.1.2",
-        "react-router-dom": "^6.14.2"
+        "react-router-dom": "^6.14.2",
+        "uuid": "^10.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.22.9",
