--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "antd": "^5.19.2",
         "classnames": "^2.3.2",
         "fabric": "^6.5.1",
+        "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dnd": "^16.0.1",
         "react-dnd-html5-backend": "^16.0.1",
